--- a/src/app/comparision/comparision.component.html
+++ b/src/app/comparision/comparision.component.html
@@ -57,7 +57,7 @@
         </mat-tab>
       </mat-tab-group>
       <h2 id="title2"> Depth of Groundwater (Rise/Fall) </h2>
-      <ngx-charts-line-chart [view]="view" [scheme]="colorScheme1" [results]="reuse" [gradient]="gradient" [xAxis]="showXAxis"
+      <ngx-charts-line-chart [view]="view" [scheme]="colorScheme1" [results]="reuse5" [gradient]="gradient" [xAxis]="showXAxis"
         [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel3"
         [yAxisLabel]="yAxisLabel3" [autoScale]="autoScale" (select)="onSelect($event)">
       </ngx-charts-line-chart>
